# tiferet

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  Readme.md  app.yml  calc_cli.py  pyproject.toml  requirements.txt  setup.py  test_calc_cli.py  tiferet_cli.py  v2.0.0b10 – Deferred Review Items Handoff.md  v2.0.0b4 — Test Package Extraction, __all__ Exports, and Python 3.12 Support.md
.github/workflows/: python-pre-release.yml  python-publish.yml
TRDs/: di-introduce-service-provider-package.md
aikicore/: constants.py  containers.py  errors.py
aikicore/clients/: yaml.py
aikicore/commands/: cli.py
aikicore/configs/: app.yml
aikicore/contexts/: app.py  cli.py  container.py  feature.py  request.py
aikicore/data/: __init__.py  cli.py  feature.py
aikicore/factories/: app.py
aikicore/objects/: __init__.py  cli.py  data.py  feature.py  object.py
aikicore/repositories/: __init__.py  cli.py
aikicore/services/: app.py  cli.py  container.py  feature.py
app/clients/: python.py  yaml.py
app/commands/: cli.py  container.py  error.py  feature.py  object.py  printing.py  sync.py
app/configs/: __init__.py  app.yml  container.yml  errors.yml  features.yml  requests.py
app/containers/: app.py  feature.py
app/contexts/: __init__.py  app.py  cli.py  container.py  env.py  error.py  feature.py  request.py
app/data/: app.py  cli.py  container.py  error.py  feature.py  object.py  sync.py
app/domain/: app.py  cli.py  container.py  core.py  feature.py  object.py  sync.py
app/factories/: app.py
app/objects/: __init__.py  cli.py  config.py  container.py  core.py  data.py  error.py  feature.py  object.py  sync.py
app/repositories/: cli.py  container.py  error.py  feature.py  object.py  sync.py
app/services/: __init__.py  app.py  cli.py  container.py  error.py  object.py  sync.py
docs/: tiferet.md
docs/architecture/: models.md
docs/collab/: agent_rule.md  code_review.md  collab_report.md  commands.md  doc.md  main.md  project_fields.md  rfp.md  tech_requirements.md
docs/core/: assets.md  blueprints.md  builders.md  code_style.md  contexts.md  contracts.md  data.md  di.md  domain.md  events.md  handlers.md  interfaces.md  mappers.md  models.md  proxies.md  repos.md  tech_requirements.md  testing.md  utils.md
docs/guides/: blueprints.md  builders.md  cli.md  collab_report.md  contexts.md  interfaces.md  mappers.md  middleware.md  repos.md  tech_requirements.md
docs/migration/: v1-to-v2.md
doctrines/: tiferet.md
examples/basic_calculator/: README.md  basic_calc.py  calc_cli.py  config.yml  formulas.yml
tests/: conftest.py
tests/assets/: __init__.py  test_app.py  test_constants.py
tests/blueprints/: test_cli.py  test_core.py  test_main.py  test_tiferet_cli.py
tests_int/: __init__.py  test_cli.py  test_main.py
tiferet/: __init__.py  main.py
tiferet_testing/: pyproject.toml
tiferet_testing/src/tiferet_testing/: __init__.py  hooks.py
(+572 files in other folders)
