[project]
name = "tiferet"
dynamic = ["version"]
description = "A multi-purpose application framework embodying beauty in form."
authors = [
    { name = "Andrew Shatz, Great Strength Systems", email = "andrew@greatstrength.me" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0.1",
    "dependency-injector>=4.49.0",
    "tomli>=2.0; python_version < '3.11'"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/greatstrength/tiferet"
Repository = "https://github.com/greatstrength/tiferet"
Download = "https://github.com/greatstrength/tiferet"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest_env>=1.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "tiferet",
    "tiferet.assets",
    "tiferet.blueprints",
    "tiferet.contexts",
    "tiferet.di",
    "tiferet.domain",
    "tiferet.events",
    "tiferet.interfaces",
    "tiferet.mappers",
    "tiferet.repos",
    "tiferet.testing",
    "tiferet.utils",
]

[tool.setuptools.dynamic]
version = { attr = "tiferet.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests", "tests_int"]
